updated gems and fixed visible bugs

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,18 +76,10 @@ ol {
 
 #logo {
 	font-family: 'MyAmaze';
-	float: left;
-	margin-right: 10px;
-	font-size: 1.7em;
-	color: #fff;
-	letter-spacing: -1px;
-	padding-top: 8px;
-	font-weight: bold;
-	line-height: 1;
+	font-size: 2em;
 }
 
 #logo:hover {
-	color: #fff;
 	text-decoration: none;
 }
 
